--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:e2e": "playwright test --config=tests/playwright.config.ts tests/e2e",
     "test:integration": "playwright test --config=tests/playwright.config.ts tests/integration", 
     "test:components": "turbo test",
+    "test:coverage": "turbo test:coverage",
     "test:focused": "npm run test:integration && npm run test:e2e && npm run test:components",
     "quick-check:admin": "./scripts/quick-test.sh admin",
     "quick-check:public": "./scripts/quick-test.sh public",
