Remove validation script from tracking and add to gitignore
The validate-all.sh script is for local development only

--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,7 @@ scripts/pre-deploy-check.sh
 scripts/pre-push-check.sh
 scripts/quick-test.sh
 scripts/local-deployment.sh
+scripts/validate-all.sh
 .husky/
 
 # Test artifacts
