--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -23,26 +23,34 @@
     "@minimall/core": "*",
     "@minimall/db": "*",
     "@minimall/ui": "*",
-    "drizzle-orm": "^0.44.4",
     "@sentry/nextjs": "^10.3.0",
     "@sentry/react": "^10.3.0",
+    "@tsparticles/react": "^3.0.0",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.4",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.468.0",
     "next": "^15.1.4",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-intersection-observer": "^9.16.0",
     "react-is": "^18.3.1",
+    "react-parallax-tilt": "^1.7.304",
     "recharts": "^3.1.2",
+    "sharp": "^0.33.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
+    "tsparticles": "^3.9.1",
     "typescript": "^5.7.2",
-    "web-vitals": "^3.5.2",
-    "sharp": "^0.33.4"
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
